# aoc_2022

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  download.py
01/: main.cpp
02/: main.cpp
